--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -61,8 +61,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\Mover.cs" />
+    <Compile Include="Assets\Scripts\SizeEnlarger.cs" />
     <Compile Include="Assets\8K Skybox Pack Free\Example Scenes\Script\RotateCamera.cs" />
-    <Compile Include="Assets\Scripts\Size.cs" />
     <Compile Include="Assets\Scripts\Rotation.cs" />
   </ItemGroup>
   <ItemGroup>
