Rain of cubes 2.0 pool and UI

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Assets\_Scripts\UI.cs" />
     <Compile Include="Assets\_Scripts\CubeSpawner.cs" />
     <Compile Include="Assets\_Scripts\Floor.cs" />
+    <Compile Include="Assets\_Scripts\Spawner.cs" />
     <Compile Include="Assets\_Scripts\BombSpawner.cs" />
     <Compile Include="Assets\_Scripts\BombDesigner.cs" />
     <Compile Include="Assets\_Scripts\Bomb.cs" />
